<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_primary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/back_primary"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/button_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:contentDescription="@string/close_btn_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close"
                app:tint="@color/label_primary" />

            <TextView
                android:id="@+id/text_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:background="@drawable/rect_bordered"
                android:backgroundTint="@color/back_secondary"
                android:fontFamily="@font/roboto"
                android:gravity="top|start"
                android:hint="@string/editor_hint"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:padding="16dp"
                android:textColor="@color/label_primary"
                android:textColorHint="@color/label_tertiary"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/title_priority"
                android:textColor="@color/label_primary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_task" />

            <Spinner
                android:id="@+id/priority_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_priority"
                app:layout_constraintTop_toBottomOf="@+id/text_priority" />

            <TextView
                android:id="@+id/text_current_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto"
                android:text=""
                android:textColor="@color/label_tertiary"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_priority" />

            <View
                android:id="@+id/separator_1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/support_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_current_priority" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_deadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/switch_make_until"
                android:textAlignment="viewStart"
                android:textColor="@color/label_primary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator_1" />

            <TextView
                android:id="@+id/text_current_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                android:fontFamily="@font/roboto"
                android:text=""
                android:textColor="@color/blue"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/switch_deadline"
                app:layout_constraintTop_toBottomOf="@+id/switch_deadline" />

            <View
                android:id="@+id/separator_2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="43dp"
                android:background="@color/support_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_deadline" />

            <TextView
                android:id="@+id/text_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:drawablePadding="16dp"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/label_disable"
                android:textSize="16sp"
                app:drawableLeftCompat="@drawable/ic_delete"
                app:drawableTint="@color/label_disable"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>